--- a/app/src/main/res/layout/clock_view.xml
+++ b/app/src/main/res/layout/clock_view.xml
@@ -46,6 +46,7 @@
                 android:id="@+id/timeStamp"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
+                android:layout_marginBottom="32dp"
                 android:fontFamily="@font/manrope_medium"
                 android:gravity="bottom|center"
                 android:maxLines="1"
@@ -61,6 +62,7 @@
                 app:layout_constraintVertical_bias="1.0" />
 
             <LinearLayout
+                android:id="@+id/linearLayout"
                 android:layout_width="0dp"
                 android:layout_height="30dp"
                 android:gravity="center|top"
